# picztream

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  cliff.toml
.github/workflows/: pages.yml  release.yml
agent/: README.md  log_setup.py  pyproject.toml  pzt_client.py  requirements-dev.txt  run_intent.py  run_telegram.py  run_telegram2.py  run_watchfolder.py
agent/compose/: adjustment_parser.py  llm_client.py  plan_composer.py  style_matcher.py  validate.py
agent/orchestrator/: driver.py  stage.py  types.py
agent/router/: collecting.py  session_router.py
agent/session/: consumer.py  protocol.py  view.py  worker.py
agent/stages/: curate.py  dedup.py  deliver.py  evaluate.py  ingest.py  style.py  style_apply_all.py
agent/store/: run_store.py
agent/tests/: test_log_setup.py  test_pzt_client.py  test_pzt_client_cancel.py  test_run_intent.py  test_run_intent_helpers.py  test_run_telegram_helpers.py  test_run_watchfolder.py
agent/tests/compose/: test_adjustment_parser.py  test_llm_client.py  test_plan_composer.py  test_style_matcher.py  test_validate.py
agent/tests/eval_offline/: run_eval.py
agent/tests/orchestrator/: fakes.py  test_driver_adjustment.py  test_driver_failure.py  test_driver_gates.py  test_driver_resume.py  test_driver_sequencing.py  test_types.py
agent/tests/router/: fakes.py  router_fakes.py  test_collecting.py  test_session_router.py  test_session_router_dispatch.py  test_session_router_planned.py  test_session_router_query.py  test_session_router_queue.py  test_session_router_style.py  test_session_router_timers.py
agent/tests/session/: session_fakes.py  test_consumer_buttons.py  test_consumer_flow.py  test_consumer_timers.py  test_run_telegram.py  test_run_telegram2.py  test_view.py  test_worker.py
agent/tests/stages/: test_curate.py  test_dedup.py  test_deliver.py  test_evaluate.py  test_ingest.py  test_style.py  test_style_apply_all.py
agent/tests/store/: test_run_store.py
agent/tests/transport/: test_telegram.py  test_telegram_client.py  test_watchfolder.py
agent/transport/: base.py  telegram.py  telegram_client.py  watchfolder.py
cli/: CMakeLists.txt  main.cpp  version.h.in
cli/commands/: browse.cpp  commands.cpp  commands.h
cli/i18n/: i18n.cpp  i18n.h
cli/kitty/: kitty.cpp  kitty.h
cli/menu/: filter_menu.cpp  filter_menu.h  recipe_menu.cpp  recipe_menu.h  tag_menu.cpp  tag_menu.h
cli/term/: cbreak_mode.h  debug_log.h  screen.h  tmux_focus.h
cli/tests/: CMakeLists.txt  headless_smoke.sh  i18n_test.cpp  kitty_test.cpp  text_test.cpp
cli/text/: text.cpp  text.h
cli/ui/: ui.cpp  ui.h
contrib/: pzt-agent.env.example
core/: CMakeLists.txt  api.cpp  api.h  result.h
core/ai/: ai.cpp  ai.h  compare.cpp  compare.h  evaluation.cpp  evaluation.h  evaluation_worker.cpp  evaluation_worker.h  score.cpp  score.h  score_worker.cpp  score_worker.h  style.cpp  style.h
core/browse/: browse.cpp  browse.h  prefetch.cpp  prefetch.h
core/color/: color.cpp  color.h
core/curate/: curate.cpp  curate.h
core/db/: database.cpp  database.h  schema.cpp  schema.h  stmt.h
core/decode/: decode.cpp  decode.h
core/dedup/: dedup.cpp  dedup.h
core/export/: export.cpp  export.h
core/media/: media.cpp  media.h
core/project/: project.cpp  project.h
core/raw/: raw.cpp  raw.h
core/recipe/: recipe.cpp  recipe.h
core/settings/: settings.cpp  settings.h
core/tagging/: tagging.cpp  tagging.h
core/tests/: CMakeLists.txt  ai_test.cpp  browse_test.cpp  color_test.cpp  compare_test.cpp  curate_test.cpp  db_test.cpp  decode_test.cpp  dedup_test.cpp  evaluation_test.cpp  evaluation_worker_test.cpp  export_test.cpp  media_test.cpp  prefetch_test.cpp  project_test.cpp  recipe_test.cpp  result_test.cpp  scaffolding_test.cpp  score_test.cpp  score_worker_test.cpp  settings_test.cpp  style_test.cpp  tagging_test.cpp  tournament_test.cpp
core/tournament/: tournament.cpp  tournament.h
docs/: Fix_It_Agent_Review.md  Fix_It_Night_Review.md  M0_Eng_Design.md  M0_PRD.md  M1_Eng_Design.md  M1_PRD.md  M2_Eng_Design.md  M2_PRD.md  M3_Dedup_Eng_Design.md  M3_Dedup_PRD.md  M3_Eng_Design.md  M3_PRD.md  M4_Agent_Workflow_Design.md  M4_Brainstorm.md  M4_Eng_Design.md  M4_PRD.md  Optimization_Backlog.md  RAW_Support.md  RELEASE.md  Roadmap.md  SPEC.md  Task_Pool.md  W2026-07-15_AgentRuntime_Eng_Design.md  W2026-07-15_AgentStyle_Eng_Design.md  W2026-07-15_LocalModel_Eng_Design.md  W2026-07-15_PRD.md  W2026-07-15_RecipeExpansion_Eng_Design.md  W2026-07-21_Eval_Eng_Design.md  W2026-07-21_PRD.md  W2026-07-21_Tournament_Eng_Design.md
docs/history/: Fix_It_Agent_2026-07_Completion_Report.md  Fix_It_Night_2026-07_Completion_Report.md  Fix_It_Night_Review.md  M0_Eng_Design.md  M1_Eng_Design.md  M2_Eng_Design.md  M3_Dedup_Eng_Design.md  M3_Dedup_PRD.md  M3_Eng_Design.md  M3_PRD.md  M4_Agent_Workflow_Design.md  M4_Brainstorm.md  M4_Eng_Design.md  M4_PRD.md  README.md  Slim_Plan_2026-07-24.md  W2026-07-15_AgentRuntime_Eng_Design.md  W2026-07-15_AgentStyle_Eng_Design.md  W2026-07-15_LocalModel_Eng_Design.md  W2026-07-15_PRD.md  W2026-07-15_RecipeExpansion_Eng_Design.md  W2026-07-21_Eval_Eng_Design.md  W2026-07-21_PRD.md  W2026-07-21_Tournament_Eng_Design.md
packaging/homebrew/: pzt-agent.rb  pzt.rb
scripts/: pzt-agent-run.sh  release.sh
spikes/acceptance_500/: README.md  generate.cpp  run_acceptance.py
spikes/color_lut_probe/: .gitignore  README.md  probe.cpp  results.md
spikes/kitty_latency_probe/: README.md  probe.cpp  results.md
spikes/libraw_probe/: README.md  probe.cpp  results.md
website/: index.html
