[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pzt-agent"
version = "2026.7.21"
requires-python = ">=3.9"
dependencies = ["python-telegram-bot>=20,<21"]

[project.scripts]
# 唯一发布的入口:Telegram bot。run_intent/run_watchfolder 是仓库内回归/开发
# 用的备用 runner,不打进 wheel(见下方 py-modules 白名单)。
pzt-agent = "run_telegram:main"

[tool.setuptools]
# flat layout:显式声明才不触发 setuptools 的"多顶层包"歧义。只发布 run_telegram
# 需要的顶层模块 + 7 个包;run_intent/run_watchfolder/tests 不发布。
py-modules = ["run_telegram", "pzt_client", "log_setup"]

[tool.setuptools.packages.find]
include = ["compose*", "orchestrator*", "router*", "session*", "stages*", "store*", "transport*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
